--- a/Biblioteca/src/visao/TelaPrincipalUsuario.form
+++ b/Biblioteca/src/visao/TelaPrincipalUsuario.form
@@ -80,8 +80,11 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Tahoma" size="24" style="1"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="reservar salas"/>
+        <Property name="text" type="java.lang.String" value="Reservar Salas de Estudo"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton2ActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel1">
       <Properties>
